--- a/Notebook-Mac.ipynb
+++ b/Notebook-Mac.ipynb
@@ -25,7 +25,7 @@
    "id": "4a910221",
    "metadata": {},
    "source": [
-    "## Step 2: Activate Python Virtual Environment\n",
+    "## Step 2: Setup Python Virtual Environment\n",
     "- Within VS Code access the terminal at the bottom of the screen by going to the bottom of the main panel until your cursor changes into a up arrow then dragging up\n",
     "- Once, this panel is revealed, click on the \"terminal\" tab\n",
     "- If you already have a terminal type \"exit\" then hit enter then follow the instructions above\n",
@@ -34,7 +34,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c05fc41",
+   "id": "0e389040",
+   "metadata": {},
+   "source": [
+    "python3.11 -m venv ml-venv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc0c3117",
    "metadata": {},
    "source": [
     "source ml-venv/bin/activate"
@@ -42,10 +50,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c05fc41",
+   "metadata": {},
+   "source": [
+    "pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4c2ea76",
    "metadata": {},
    "source": [
-    "## Step 4: Test PyTorch\n",
+    "## Step 3: Test PyTorch\n",
     "- Run the following code segment to verify that the virtual environment is working as intended\n",
     "    - When doing this, VS Code will prompt you for a kernel at the top of the screen\n",
     "    - Click on \"Python Environments\" then \"ml-venv\"\n",
@@ -61,7 +77,9 @@
    "source": [
     "import torch\n",
     "import pandas as pd\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -69,7 +87,7 @@
    "id": "8f1f5cba",
    "metadata": {},
    "source": [
-    "# Step 5: Importing and Cleaning Data"
+    "# Step 4: Importing and Cleaning Data"
    ]
   },
   {
@@ -109,12 +127,12 @@
    "id": "c1cf678f",
    "metadata": {},
    "source": [
-    "# Step 6: Split the Dataset"
+    "# Step 5: Split the Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "15648efb",
    "metadata": {},
    "outputs": [],
@@ -136,10 +154,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04b7717e",
+   "metadata": {},
+   "source": [
+    "## Step 5.5: Visualizing Connections\n",
+    "- The following code displays the correlation coefficient between each of the 14 variables and the output variable\n",
+    "- As you may notice, none of the variables on their own can accurately predict whether the patient will experience a heart attack\n",
+    "- This is why a holistic analysis of the data using deep learning is advantagous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e83729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 1))\n",
+    "sns.heatmap(train.corr()[['output']].T, annot=True, cmap='coolwarm', fmt='.2f', cbar=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "099dd198",
    "metadata": {},
    "source": [
-    "# Step 7: Define a Dataset Object\n",
+    "# Step 6: Define a Dataset Object\n",
     "- To make the data easier to parse through while training, PyTorch offers a Dataset class we can inherant and implement for our own data"
    ]
   },
@@ -183,7 +224,7 @@
    "id": "f062392b",
    "metadata": {},
    "source": [
-    "# Step 8: Design the Neural Network"
+    "# Step 7: Design the Neural Network"
    ]
   },
   {
@@ -205,7 +246,7 @@
    "id": "2a86e99f",
    "metadata": {},
    "source": [
-    "# Step 9: Create Training Function"
+    "# Step 8: Create Training Function"
    ]
   },
   {
@@ -223,7 +264,7 @@
    "id": "366d1fcf",
    "metadata": {},
    "source": [
-    "# Step 10: Initialize Objects and Train Model"
+    "# Step 9: Initialize Objects and Train Model"
    ]
   },
   {
@@ -239,7 +280,7 @@
    "id": "0a01f792",
    "metadata": {},
    "source": [
-    "# Test Model Performance"
+    "# Step 10: Test Model Performance"
    ]
   },
   {
@@ -267,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
