--- a/Notebook-Windows.ipynb
+++ b/Notebook-Windows.ipynb
@@ -12,11 +12,19 @@
     "Install \"Python 3.11\"\n",
     "    - This is not the newest version of python, but this older version is necessary for the packages to be compatible\n",
     "    - Do not install \"Python 3.12\"\n",
-    "## Step 2: Activate Python Virtual Environment\n",
+    "## Step 2: Setup Python Virtual Environment\n",
     "- Within VS Code access the terminal at the bottom of the screen by going to the bottom of the main panel until your cursor changes into a up arrow then dragging up\n",
     "- Once, this panel is revealed, click on the \"terminal\" tab\n",
     "- If you already have a terminal type \"exit\" then hit enter then follow the instructions above\n",
     "- Now, copy and paste the following commands into the terminal one at a time (you can't use ctrl-v to paste into Powershells. You can just click on the cell and ctrl-c to copy it):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c98661a7",
+   "metadata": {},
+   "source": [
+    "python3.11 -m venv ml-venv"
    ]
   },
   {
@@ -29,10 +37,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51e9bd16",
+   "metadata": {},
+   "source": [
+    "pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f4c2ea76",
    "metadata": {},
    "source": [
-    "## Step 4: Test PyTorch and Pandas\n",
+    "## Step 3: Test PyTorch and Pandas\n",
     "- Run the following code segment to verify that the virtual environment is working as intended\n",
     "    - When doing this, VS Code will prompt you for a kernel at the top of the screen\n",
     "    - Click on \"Python Environments\" then \"ml-venv\"\n",
@@ -48,7 +64,9 @@
    "source": [
     "import torch\n",
     "import pandas as pd\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -56,7 +74,7 @@
    "id": "3a0d77a3",
    "metadata": {},
    "source": [
-    "# Step 5: Importing and Cleaning Data"
+    "# Step 4: Importing and Cleaning Data"
    ]
   },
   {
@@ -96,7 +114,7 @@
    "id": "7d9d1067",
    "metadata": {},
    "source": [
-    "# Step 6: Split the Dataset"
+    "# Step 5: Split the Dataset"
    ]
   },
   {
@@ -123,10 +141,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28405641",
+   "metadata": {},
+   "source": [
+    "## Step 5.5: Visualizing Connections\n",
+    "- The following code displays the correlation coefficient between each of the 14 variables and the output variable\n",
+    "- As you may notice, none of the variables on their own can accurately predict whether the patient will experience a heart attack\n",
+    "- This is why a holistic analysis of the data using deep learning is advantagous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "961ce934",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 1))\n",
+    "sns.heatmap(train.corr()[['output']].T, annot=True, cmap='coolwarm', fmt='.2f', cbar=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7d4f3fce",
    "metadata": {},
    "source": [
-    "# Step 7: Define a Dataset Object\n",
+    "# Step 6: Define a Dataset Object\n",
     "- To make the data easier to parse through while training, PyTorch offers a Dataset class we can inherant and implement for our own data"
    ]
   },
@@ -170,7 +211,7 @@
    "id": "ae38006f",
    "metadata": {},
    "source": [
-    "# Step 8: Design the Neural Network"
+    "# Step 7: Design the Neural Network"
    ]
   },
   {
@@ -192,7 +233,7 @@
    "id": "b6b889fc",
    "metadata": {},
    "source": [
-    "# Step 9: Create Training Function"
+    "# Step 8: Create Training Function"
    ]
   },
   {
@@ -210,7 +251,7 @@
    "id": "c38ff3f7",
    "metadata": {},
    "source": [
-    "# Step 10: Initialize Objects and Train Model"
+    "# Step 9: Initialize Objects and Train Model"
    ]
   },
   {
@@ -226,7 +267,7 @@
    "id": "2d64519e",
    "metadata": {},
    "source": [
-    "# Test Model Performance"
+    "# Step 10: Test Model Performance"
    ]
   },
   {
@@ -254,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
