--- a/Notebook-Mac.ipynb
+++ b/Notebook-Mac.ipynb
@@ -290,6 +290,14 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04ead058",
+   "metadata": {},
+   "source": [
+    "Link to dataset: https://www.kaggle.com/datasets/rashikrahmanpritom/heart-attack-analysis-prediction-dataset"
+   ]
   }
  ],
  "metadata": {
