Installing homebrew now

--- a/Notebook-Mac.ipynb
+++ b/Notebook-Mac.ipynb
@@ -6,10 +6,18 @@
    "metadata": {},
    "source": [
     "# Workshop 1: Machine Learning for Mac\n",
-    "## Step 1: Installing Python\n",
+    "## Step 1: Installing Homebrew and Python\n",
     "- Navigate to the Launch Pad\n",
     "- Search \"Terminal\"\n",
-    "- Copy and paste the following command into the terminal:"
+    "- Copy and paste the following commands into the terminal one at a time and hit enter after each command:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db4d4e9d",
+   "metadata": {},
+   "source": [
+    "/bin/bash -c \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)\""
    ]
   },
   {
