--- a/Notebook-Mac.ipynb
+++ b/Notebook-Mac.ipynb
@@ -9,7 +9,7 @@
     "## Step 1: Installing Homebrew and Python\n",
     "- Navigate to the Launch Pad\n",
     "- Search \"Terminal\"\n",
-    "- Copy and paste the following commands into the terminal one at a time and hit enter after each command:"
+    "- Copy and paste the following commands into the terminal one at a time and hit enter after each one:"
    ]
   },
   {
@@ -18,6 +18,34 @@
    "metadata": {},
    "source": [
     "/bin/bash -c \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f935c480",
+   "metadata": {},
+   "source": [
+    "- You may have to enter your computer password after running this command\n",
+    "- Your password will **not** show up when you type it in for security reasons but it is working\n",
+    "- Hit enter once you have entered your password\n",
+    "- Copy and paste the following commands and hit enter after each one:\n",
+    "    - HOMEFOLDER should be replaced by whatever comes before the \\@ in your terminal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ab0ea71",
+   "metadata": {},
+   "source": [
+    "echo 'eval $(/opt/homebrew/bin/brew shellenv)' >> /Users/HOMEFOLDER/.zprofile"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15631938",
+   "metadata": {},
+   "source": [
+    "eval $(/opt/homebrew/bin/brew shellenv)"
    ]
   },
   {
