--- a/Notebook-Windows.ipynb
+++ b/Notebook-Windows.ipynb
@@ -37,6 +37,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0f71702c",
+   "metadata": {},
+   "source": [
+    "- If you run into an error saying that \"execution of scripts is disabled on this system, run the following command:\n",
+    "    - Set-ExecutionPolicy RemoteSigned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51e9bd16",
    "metadata": {},
    "source": [
