--- a/Notebook-Mac.ipynb
+++ b/Notebook-Mac.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f062392b",
+   "id": "15911b99",
    "metadata": {},
    "source": [
     "# Step 7: Design the Neural Network"
@@ -266,20 +266,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24ca8dd",
+   "id": "9d76a1f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "class HeartAttackModel(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        # the model will have 3 layers with 64 neurons each\n",
+    "        # the 14 input neurons are the number of columns in the dataset\n",
+    "        self.layer1 = nn.Linear(14, 64)\n",
+    "        self.act1 = nn.ReLU()\n",
+    "        self.layer2 = nn.Linear(64, 64)\n",
+    "        self.act2 = nn.ReLU()\n",
+    "        self.layer3 = nn.Linear(64, 64)\n",
+    "        self.act3 = nn.ReLU()\n",
     "\n",
-    "    def forward(self, x): pass"
+    "        # the output layer will have 1 neuron because the output is binary\n",
+    "        self.output = nn.Linear(64, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # the forward method will pass the input through each layer and activation function\n",
+    "        # this is what is called when the model is used\n",
+    "        x = self.layer1(self.act1(x))\n",
+    "        x = self.layer2(self.act2(x))\n",
+    "        x = self.layer3(self.act3(x))\n",
+    "        x = self.sigmoid(self.output(x))\n",
+    "        return x"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a86e99f",
+   "id": "11a90daa",
    "metadata": {},
    "source": [
     "# Step 8: Create Training Function"
@@ -288,16 +307,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d723c90",
+   "id": "6d0f3198",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model(model, train_loader, val_loader, epochs, learningRate): pass"
+    "def train_model(model, train_loader, val_loader, epochs, lr):\n",
+    "    # the model will be trained using the binary cross entropy loss function and the Adam optimizer\n",
+    "    # the loss function will be used to determine how well the model is performing\n",
+    "    criterion = nn.BCELoss()\n",
+    "    \n",
+    "    # the optimizer will be used to adjust the weights of the model\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "    # the model will be trained for the number of epochs specified\n",
+    "    for epoch in range(epochs):\n",
+    "        # turns the model to training mode\n",
+    "        model.train()\n",
+    "\n",
+    "        # loops through all the data in the training set\n",
+    "        for x, y in train_loader:\n",
+    "            # get the output of the model\n",
+    "            y_pred = model(x)\n",
+    "\n",
+    "            # calculate the loss\n",
+    "            loss = criterion(y_pred, y)\n",
+    "\n",
+    "            # zero the gradients\n",
+    "            optimizer.zero_grad()\n",
+    "\n",
+    "            # calculate the gradients\n",
+    "            loss.backward()\n",
+    "\n",
+    "            # update the weights\n",
+    "            optimizer.step()\n",
+    "\n",
+    "        # turn the model to evaluation mode\n",
+    "        model.eval()\n",
+    "\n",
+    "        # turn off gradient tracking\n",
+    "        with torch.no_grad():\n",
+    "            # the loss will be calculated on the validation set and printed\n",
+    "            val_loss = 0\n",
+    "            for x, y in val_loader:\n",
+    "                y_pred = model(x)\n",
+    "                loss = criterion(y_pred, y)\n",
+    "                val_loss += loss.item()\n",
+    "            print(f'Epoch {epoch} - Validation Loss: {val_loss}')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "366d1fcf",
+   "id": "6df24325",
    "metadata": {},
    "source": [
     "# Step 9: Initialize Objects and Train Model"
@@ -306,14 +366,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c0900f3",
+   "id": "88c92e8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create the model and datasets\n",
+    "model = HeartAttackModel()\n",
+    "train_dataset = HeartDataset(train)\n",
+    "val_dataset = HeartDataset(validation)\n",
+    "\n",
+    "# format the data for the model\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=True)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=2, shuffle=False)\n",
+    "\n",
+    "# train the model\n",
+    "train_model(model, train_loader, val_loader, 100, 0.001)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "0a01f792",
+   "id": "388a3bf0",
    "metadata": {},
    "source": [
     "# Step 10: Test Model Performance"
@@ -322,14 +394,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41cf70c3",
+   "id": "0e8d2d53",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create the test dataset and loader and test the model\n",
+    "test_dataset = HeartDataset(test)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=2, shuffle=False)\n",
+    "model.eval()\n",
+    "\n",
+    "# turn off gradient tracking\n",
+    "with torch.no_grad():\n",
+    "    correct = 0\n",
+    "    for x, y in test_loader:\n",
+    "        y_pred = model(x)\n",
+    "        y_pred = torch.round(y_pred)\n",
+    "        print(y_pred[0][0].item(), y[0][0].item())\n",
+    "        correct += (y_pred == y).sum().item()\n",
+    "    # print the accuracy of the model\n",
+    "    print(f'Accuracy: {round((correct / (len(test_loader)*2))*100, 3)}%')"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "04ead058",
+   "id": "b6975c73",
    "metadata": {},
    "source": [
     "Link to dataset: https://www.kaggle.com/datasets/rashikrahmanpritom/heart-attack-analysis-prediction-dataset"
